bug: 42167, 42171 - Showing zimlet list sorted by name (zimlet name after last '_' char). - Not showing scrollbar for zimlet list itself. It auto expands.
http://bugzilla.zimbra.com/show_bug.cgi?id=42167
http://bugzilla.zimbra.com/show_bug.cgi?id=42171

Copied from Perforce
 Change: 222185

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -2554,12 +2554,16 @@ HTML>BODY .appt-selected .appt_allday_body
 	/*overflow: visible;*/
 	height: auto;
 }
-
+.ZmPrefZimletListView .DwtListView-Rows{
+    overflow: visible;
+}
 .ZOptionsOfflineAccts {
 	font-size: 14px;
 	text-align: center;
 }
-
+.ZmPrefZimletListView .Row table, .ZmPrefZimletListView .RowDouble table {
+    table-layout:auto;    
+}
 .ZOptionsAcctName {
 	margin-right: 10px;
 	white-space: nowrap;
